PROJECT(Analysiser_new)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#ADD_COMPILE_OPTIONS(-Ofast)
ADD_COMPILE_OPTIONS(-g)
ADD_COMPILE_OPTIONS(-DOUTPUT)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

FIND_LIBRARY(PCAP pcap REQUIRED)
#FIND_LIBRARY(GOOGLE-PROF profiler REQUIRED)


ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

#TODO: ADD_EXECUTABLES AND TARGET_LINK_LIBRARIES

ADD_EXECUTABLE(http http.cpp)
TARGET_LINK_LIBRARIES(http cxx_src_lib ${PCAP} )
ADD_EXECUTABLE(http_gap http_gap.cpp)
TARGET_LINK_LIBRARIES(http_gap cxx_src_lib ${PCAP} )
ADD_EXECUTABLE(judge judge_start.cpp)
TARGET_LINK_LIBRARIES(judge cxx_src_lib ${PCAP})


INSTALL(TARGETS 
			http http_gap judge
		DESTINATION bin)
